traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:19: error: ':' expected but ',' found.
def versDroite(x,y) {
                ^TraversalZigZag:37: error: identifier expected but '}' found.
}
^